unpackaged/main/default/objects/project_cloud__Meeting__c/project_cloud__Meeting__c.object-meta.xml
<CustomObject>
    <label>Meeting</label>
    <nameField>
        <label>Meeting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Meetings</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>