unpackaged/main/default/objects/project_cloud__Meeting__c/fields/project_cloud__Account__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This field will allow you to relate an Account to a Meeting.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Meetings</relationshipLabel>
    <relationshipName>Meetings</relationshipName>
    <type>Lookup</type>
</CustomField>