unpackaged/main/default/objects/project_cloud__Meeting__c/fields/project_cloud__Case__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This field will allow you to relate a Case to a Meeting.</inlineHelpText>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Meetings</relationshipLabel>
    <relationshipName>Meetings</relationshipName>
    <type>Lookup</type>
</CustomField>