unpackaged/main/default/objects/project_cloud__Meeting__c/fields/project_cloud__Duration__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Duration__c</fullName>
    <inlineHelpText>This field will document the total duration (in minutes) that the meeting should last.</inlineHelpText>
    <label>Duration (Minutes)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>