unpackaged/main/default/objects/project_cloud__Meeting__c/fields/project_cloud__Externally_Visible__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Externally_Visible__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box to grant sites access to this meeting.</inlineHelpText>
    <label>Externally Visible</label>
    <type>Checkbox</type>
</CustomField>