unpackaged/main/default/objects/project_cloud__Meeting__c/fields/project_cloud__IsTemplate__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__IsTemplate__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if you would like to reference this Meeting as a template.</inlineHelpText>
    <label>Set as Template</label>
    <type>Checkbox</type>
</CustomField>