unpackaged/main/default/objects/project_cloud__Meeting__c/fields/project_cloud__Last_Open_Action__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Last_Open_Action__c</fullName>
    <label>Last Open Action</label>
    <summarizedField>project_cloud__Agenda_Item__c.project_cloud__Last_Open_Action__c</summarizedField>
    <summaryFilterItems>
        <field>project_cloud__Agenda_Item__c.project_cloud__Last_Open_Action__c</field>
        <operation>notEqual</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>project_cloud__Agenda_Item__c.project_cloud__Meeting__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>