unpackaged/main/default/objects/project_cloud__Meeting__c/fields/project_cloud__Meeting_Attendees__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Meeting_Attendees__c</fullName>
    <description>This number represents the total number of invitees in a meeting, filtered to only include those who are marked as attended.</description>
    <inlineHelpText>This number represents the total number of invitees in a meeting, filtered to only include those who are marked as attended.</inlineHelpText>
    <label>Meeting Attendees</label>
    <summaryFilterItems>
        <field>project_cloud__Meeting_Attendee__c.project_cloud__IsAttended__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>project_cloud__Meeting_Attendee__c.project_cloud__Meeting__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>