unpackaged/main/default/objects/project_cloud__Meeting__c/fields/project_cloud__Minutes_Emailed_Date__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Minutes_Emailed_Date__c</fullName>
    <inlineHelpText>This field will track when the last time this Meeting&#39;s Minutes were emailed.</inlineHelpText>
    <label>Minutes Emailed Date</label>
    <type>DateTime</type>
</CustomField>