unpackaged/main/default/objects/project_cloud__Meeting__c/fields/project_cloud__Objective__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Objective__c</fullName>
    <inlineHelpText>This area will allow users to specify the summarized objective of the Meeting.</inlineHelpText>
    <label>Objective</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>