unpackaged/main/default/objects/project_cloud__Meeting__c/fields/project_cloud__Opportunity__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This field will allow you to relate an Opportunity to a Meeting.</inlineHelpText>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Meetings</relationshipLabel>
    <relationshipName>Meetings</relationshipName>
    <type>Lookup</type>
</CustomField>