unpackaged/main/default/objects/project_cloud__Meeting__c/fields/project_cloud__RelatedTo__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__RelatedTo__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>This field will show users what object this meeting is related too.</inlineHelpText>
    <label>System - Related To</label>
    <length>18</length>
    <type>Text</type>
</CustomField>