unpackaged/main/default/objects/project_cloud__Meeting__c/fields/project_cloud__Start__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Start__c</fullName>
    <inlineHelpText>This field will define the date the Meeting will take place.</inlineHelpText>
    <label>Meeting Start</label>
    <type>DateTime</type>
</CustomField>