unpackaged/main/default/objects/project_cloud__Meeting__c/recordTypes/project_cloud__Customer_Success.recordType-meta.xml
<RecordType>
    <fullName>project_cloud__Customer_Success</fullName>
    <active>true</active>
    <label>Customer Success</label>
</RecordType>