unpackaged/main/default/objects/project_cloud__Meeting__c/recordTypes/project_cloud__Finance.recordType-meta.xml
<RecordType>
    <fullName>project_cloud__Finance</fullName>
    <active>true</active>
    <label>Finance</label>
</RecordType>