unpackaged/main/default/objects/project_cloud__Meeting__c/recordTypes/project_cloud__HR.recordType-meta.xml
<RecordType>
    <fullName>project_cloud__HR</fullName>
    <active>true</active>
    <label>HR</label>
</RecordType>