unpackaged/main/default/objects/project_cloud__Meeting__c/recordTypes/project_cloud__IT.recordType-meta.xml
<RecordType>
    <fullName>project_cloud__IT</fullName>
    <active>true</active>
    <label>IT</label>
</RecordType>