unpackaged/main/default/objects/project_cloud__Meeting__c/recordTypes/project_cloud__Marketing.recordType-meta.xml
<RecordType>
    <fullName>project_cloud__Marketing</fullName>
    <active>true</active>
    <label>Marketing</label>
</RecordType>