unpackaged/main/default/objects/project_cloud__Meeting__c/recordTypes/project_cloud__Professional_Services.recordType-meta.xml
<RecordType>
    <fullName>project_cloud__Professional_Services</fullName>
    <active>true</active>
    <label>Professional Services</label>
</RecordType>