unpackaged/main/default/objects/project_cloud__Meeting__c/recordTypes/project_cloud__Sales.recordType-meta.xml
<RecordType>
    <fullName>project_cloud__Sales</fullName>
    <active>true</active>
    <label>Sales</label>
</RecordType>