unpackaged/main/default/objects/project_cloud__Meeting__c/listViews/project_cloud__All_Templates.listView-meta.xml
<ListView>
    <fullName>project_cloud__All_Templates</fullName>
    <columns>NAME</columns>
    <columns>project_cloud__Duration__c</columns>
    <columns>project_cloud__Objective__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>project_cloud__IsTemplate__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Templates</label>
</ListView>